--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,7 +5,8 @@
     font-size: 18px;
     line-height: 1.22;
     text-align: center;
-    width: 360px;
+    max-width: 360px;
+    width: 100%;
     position: relative;
     z-index: 1;
 }
@@ -13,7 +14,7 @@
 
 @media (max-width: 767px) {
     .cover__subtitle {
-        width: 288px;
+        max-width: 288px;
         font-size: 14px;
         line-height: 1.14;
     }
