--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,18 +2,19 @@
     color: white;
     font-size: 16px;
     line-height: 1.12;
-    padding-right: 18px;
+    margin-right: 18px;
     text-decoration: none;
+    max-width: fit-content;
 }
 
 .footer__link:nth-last-of-type(1) {
-    padding-right: 0;
-    padding-bottom: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 }
 
 @media (max-width: 767px) {
     .footer__link {
-        padding-bottom: 32px;
+        margin-bottom: 32px;
         font-size: 24px;
         line-height: 1;
     }
