--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,20 +1,22 @@
 .header__lang-link {
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.17;
     color: white;
-    padding-right: 18px;
-    padding-top: 46px;
+    margin-right: 18px;
+    margin-top: 46px;
     text-decoration: none;
     text-align: end;
     display: inline-block;
 }
 
 .header__lang-link:nth-last-of-type(1) {
-    padding-right: 0;
+    margin-right: 0;
 }
 
 @media (max-width: 767px) {
     .header__lang-link {
-        padding-top: 30px;
+        margin-top: 30px;
+        font-size: 18px;
+        line-height: 1.11;
     }
 }
