--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,16 @@
 .intro__list {
     color: white;
     font-size: 12px;
-    font-weight: 700;
     line-height: 1.5;
+    font-family: 'Inter-Bold';
     list-style: none;
     margin: 0;
     padding-top: 33px;
     padding-left: 0;
+}
+
+@media (max-width: 767px) {
+    .intro__list {
+        padding-top: 34px;
+    }
 }
