--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,6 +4,7 @@
     font-size: 54px;
     font-weight: 900;
     line-height: 1.07;
+    font-family: 'Inter-Black';
 }
 
 @media (max-width: 767px) {
