--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,6 +4,12 @@
     padding-left: 96px;
 }
 
+@media (max-width: 1279px) {
+    .intro {
+        padding-left: 48px;
+    }
+}
+
 @media (max-width: 1023px) {
     .intro {
         padding-top: 88px;
@@ -16,8 +22,6 @@
 @media (max-width: 767px) {
     .intro {
         padding-top: 64px;
-        padding-left: 0;
-        margin: 0 auto;
         max-width: 288px;
     }
 }
