--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,10 @@
+@media (max-width: 1279px) {
+    .lead__image {
+        width: 928px;
+        height: 580px;
+    }
+}
+
 @media (max-width: 1023px) {
     .lead__image {
         width: 768px;
