--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -13,6 +13,8 @@
     .lead__subtitle {
         font-size: 16px;
         line-height: 1.25;
-        width: 288px;
+        max-width: 288px;
+        padding-top: 16px;
+        padding-bottom: 40px;
     }
 }
