--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     max-width: 1184px;
     background-color: #2A2C2F;
-    font-family: Inter, sans-serif;
+    font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
 @media (max-width: 1279px) {
