--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 460px 1fr;
     row-gap: 48px;
-    column-gap: 40px
+    column-gap: 40px;
 }
 
 .place:last-of-type {
