after 2nd review

--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,7 +2,7 @@
     color: white;
     font-size: 12px;
     line-height: 1.5;
-    font-family: 'Inter-Bold';
+    font-weight: 700;
     list-style: none;
     margin: 0;
     padding-top: 33px;
