--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,7 +6,7 @@
     font-size: 30px;
     line-height: 1.2;
     text-align: center;
-    width: 640px;
+    max-width: 640px;
 }
 
 @media (max-width: 767px) {
