--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
     font-size: 72px;
     font-weight: 900;
     line-height: 1.06;
-    font-family: 'Inter-Black';
+    font-weight: 900;
     text-align: center;
     width: 560px;
     position: relative;
