--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
     font-size: 96px;
     font-weight: 900;
     line-height: 1.04;
-    font-family: "Inter-Black";
+    font-weight: 900;
     text-align: center;
     width: 720px;
 }  
