--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
     margin: 0;
     color: white;
-    font-family: 'Inter-Black';
+    font-weight: 900;
     font-size: 72px;
     font-weight: 900;
     line-height: 1.06;
